// Vitest Snapshot v1

exports[`Button > should match its default snapshot 1`] = `
<button
  class=""
  disabled="false"
>
  <!-- @slot Button content. -->
  
  Button
  
</button>
`;

exports[`Button > should match its variant primary snapshot 1`] = `
<button
  class="btn btn-primary"
  disabled="false"
>
  <!-- @slot Button content. -->
  
  Button
  
</button>
`;
